--- a/USA/State/NY.html
+++ b/USA/State/NY.html
@@ -179,62 +179,68 @@
 			<div class="column">
 				<img src="NY/Dutchess/SEAL.png" height="150"><br>Dutchess County</br>
 				<div class="column">
-					<img src="NY/Dutchess/Sheriff.png" height="80"><br>Dutchess County</br>
+					<img src="NY/Dutchess/Sheriff.png" height="80"><br>Dutchess County Sheriff</br>
 				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Saratoga/SEAL.png" height="150"><br>Saratoga County</br>
 				<div class="column">
-					<img src="NY/Saratoga/Sheriff2.png" height="80"><br>Saratoga County</br>
+					<img src="NY/Saratoga/Sheriff2.png" height="80"><br>Saratoga County Sheriff</br>
 				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Oneida/SEAL.png" height="150"><br>Oneida County</br>
 				<div class="column">
-					<img src="NY/Oneida/SheriffM.png" height="80"><br>Oneida County</br>
+					<img src="NY/Oneida/SheriffM.png" height="80"><br>Oneida County Sheriff</br>
 				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Niagara/SEAL.png" height="150"><br>Niagara County</br>
 				<div class="column">
-					<img src="NY/Niagara/Sheriff.png" height="80"><br>Niagara County</br>
+					<img src="NY/Niagara/Sheriff.png" height="80"><br>Niagara County Sheriff</br>
 				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Broome/SEAL.png" height="150"><br>Broome County</br>
 				<div class="column">
-					<img src="NY/Broome/Sheriff.png" height="80"><br>Broome County</br>
+					<img src="NY/Broome/Sheriff.png" height="80"><br>Broome County Sheriff</br>
 				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Ulster/SEAL.png" height="150"><br>Ulster County</br>
 				<div class="column">
-					<img src="NY/Ulster/Sheriff.png" height="80"><br>Ulster County</br>
+					<img src="NY/Ulster/Sheriff.png" height="80"><br>Ulster County Sheriff</br>
 				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Schenectady/SEAL.png" height="150"><br>Schenectady County</br>
 				<div class="column">
-					<img src="NY/Schenectady/Sheriff.png" height="80"><br>Schenectady County</br>
+					<img src="NY/Schenectady/Sheriff.png" height="80"><br>Schenectady County Sheriff</br>
 				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Rensselaer/SEAL.png" height="150"><br>Rensselaer County</br>
 				<div class="column">
-					<img src="NY/Rensselaer/Sheriff.png" height="80"><br>Rensselaer County</br>
+					<img src="NY/Rensselaer/Sheriff.png" height="80"><br>Rensselaer County Sheriff</br>
 				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Chautauqua/SEAL.png" height="150"><br>Chautauqua County</br>
 				<div class="column">
-					<img src="NY/Chautauqua/Sheriff.png" height="80"><br>Chautauqua County Sheriff</br>
+					<img src="NY/Chautauqua/SheriffM.png" height="80"><br>Chautauqua County Sheriff</br>
 				</div>
 			</div>
 			<div class="column">
-				<img src="NY/Oswego/SEAL.png" height="150"><br>Oswego County</br>
+				<img src="NY/Oswego/SEAL2.png" height="150"><br>Oswego County</br>
+				<div class="column">
+					<img src="NY/Oswego/Sheriff2.png" height="80"><br>Oswego County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Jefferson/SEAL.png" height="150"><br>Jefferson County</br>
+				<div class="column">
+					<img src="NY/Jefferson/Sheriff.png" height="80"><br>Jefferson County Sheriff</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Ontario/SEAL.png" height="150"><br>Ontario County</br>
@@ -244,108 +250,219 @@
 			</div>
 			<div class="column">
 				<img src="NY/St. Lawrence/SEAL.png" height="150"><br>St. Lawrence County</br>
+				<div class="column">
+					<img src="NY/St. Lawrence/Sheriff.png" height="80"><br>St. Lawrence County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Tompkins/SEAL.png" height="150"><br>Tompkins County</br>
+				<div class="column">
+					<img src="NY/Tompkins/Sheriff.png" height="80"><br>Tompkins County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Putnam/SEAL.png" height="150"><br>Putnam County</br>
+				<div class="column">
+					<img src="NY/Putnam/Sheriff.png" height="80"><br>Putnam County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Steuben/SEAL.png" height="150"><br>Steuben County</br>
+				<div class="column">
+					<img src="NY/Steuben/Sheriff.png" height="80"><br>Steuben County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Wayne/SEAL.png" height="150"><br>Wayne County</br>
+				<div class="column">
+					<img src="NY/Wayne/Sheriff.png" height="80"><br>Wayne County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Sullivan/SEAL.png" height="150"><br>Sullivan County</br>
+				<div class="column">
+					<img src="NY/Sullivan/Sheriff.png" height="80"><br>Sullivan County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Clinton/SEAL.png" height="150"><br>Clinton County</br>
+				<div class="column">
+					<img src="NY/Clinton/Sheriff2.png" height="80"><br>Clinton County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Cattaraugus/SEAL.png" height="150"><br>Cattaraugus County</br>
+				<div class="column">
+					<img src="NY/Cattaraugus/Sheriff2.png" height="80"><br>Cattaraugus County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Cayuga/SEAL.png" height="150"><br>Cayuga County</br>
+				<div class="column">
+					<img src="NY/Cayuga/Sheriff/Sheriff.png" height="80"><br>Cayuga County Sheriff</br>
+				</div>
+				<div class="column">
+					<img src="NY/Cayuga/Sheriff/Police.png" height="80"><br>Cayuga County Police</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Madison/SEAL.png" height="150"><br>Madison County</br>
+				<div class="column">
+					<img src="NY/Madison/Sheriff.png" height="80"><br>Madison County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Warren/SEAL.png" height="150"><br>Warren County</br>
+				<div class="column">
+					<img src="NY/Warren/Sheriff.png" height="80"><br>Warren County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Livingston/SEAL.png" height="150"><br>Livingston County</br>
+				<div class="column">
+					<img src="NY/Livingston/Sheriff.png" height="80"><br>Livingston County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Columbia/SEAL.png" height="150"><br>Columbia County</br>
+				<div class="column">
+					<img src="NY/Columbia/Sheriff.png" height="80"><br>Columbia County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Otsego/SEAL.png" height="150"><br>Otsego County</br>
+				<div class="column">
+					<img src="NY/Otsego/SheriffM.png" height="80"><br>Otsego County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Washington/SEAL.png" height="150"><br>Washington County</br>
+				<div class="column">
+					<img src="NY/Washington/Sheriff.png" height="80"><br>Washington County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Herkimer/SEAL.png" height="150"><br>Herkimer County</br>
+				<div class="column">
+					<img src="NY/Herkimer/Sheriffb.png" height="80"><br>Herkimer County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Genesee/SEAL.png" height="150"><br>Genesee County</br>
+				<div class="column">
+					<img src="NY/Genesee/Sheriff.png" height="80"><br>Genesee County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Fulton/SEAL.png" height="150"><br>Fulton County</br>
+				<div class="column">
+					<img src="NY/Fulton/SheriffM.png" height="80"><br>Fulton County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Montgomery/SEAL.png" height="150"><br>Montgomery County</br>
+				<div class="column">
+					<img src="NY/Montgomery/Sheriff/Sheriff.png" height="80"><br>Montgomery County</br>
+				</div>
+				<div class="column">
+					<img src="NY/Montgomery/Sheriff/EMS.png" height="80"><br>Montgomery County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Tioga/SEAL.png" height="150"><br>Tioga County</br>
+				<div class="column">
+					<img src="NY/Tioga/Sheriff2.png" height="80"><br>Tioga County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Greene/SEAL.png" height="150"><br>Greene County</br>
+				<div class="column">
+					<img src="NY/Greene/Sheriff.png" height="80"><br>Greene County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Allegany/SEAL.png" height="150"><br>Allegany County</br>
+				<div class="column">
+					<img src="NY/Allegany/SheriffM.png" height="80"><br>Allegany County</br>
+				</div>
 			</div>
 			<div class="column">
-				<img src="NY/Franklin/SEAL.png" height="150"><br>Franklin County</br>
+				<img src="NY/Franklin/SEAL2.png" height="150"><br>Franklin County</br>
+				<div class="column">
+					<img src="NY/Franklin/SheriffM.png" height="80"><br>Franklin County</br>
+				</div>
 			</div>
 			<div class="column">
-				<img src="NY/Chenango/SEAL.png" height="150"><br>Chenango County</br>
+				<img src="NY/Chenango/SEAL2.png" height="150"><br>Chenango County</br>
+				<div class="column">
+					<img src="NY/Chenango/Sheriff.png" height="80"><br>Chenango County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Cortland/SEAL.png" height="150"><br>Cortland County</br>
+				<div class="column">
+					<img src="NY/Cortland/SheriffM.png" height="80"><br>Cortland County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Delaware/SEAL.png" height="150"><br>Delaware County</br>
+				<div class="column">
+					<img src="NY/Delaware/SheriffM.png" height="80"><br>Delaware County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Wyoming/SEAL.png" height="150"><br>Wyoming County</br>
+				<div class="column">
+					<img src="NY/Wyoming/SheriffM.png" height="80"><br>Wyoming County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Orleans/SEAL.png" height="150"><br>Orleans County</br>
+				<div class="column">
+					<img src="NY/Orleans/Sheriff.png" height="80"><br>Orleans County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Essex/SEAL.png" height="150"><br>Essex County</br>
+				<div class="column">
+					<img src="NY/Essex/Sheriff.png" height="80"><br>Essex County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Seneca/SEAL.png" height="150"><br>Seneca County</br>
+				<div class="column">
+					<img src="NY/Seneca/SheriffM.png" height="80"><br>Seneca County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Schoharie/SEAL.png" height="150"><br>Schoharie County</br>
+				<div class="column">
+					<img src="NY/Schoharie/SheriffM.png" height="80"><br>Schoharie County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Lewis/SEAL.png" height="150"><br>Lewis County</br>
+				<div class="column">
+					<img src="NY/Lewis/SheriffM.png" height="80"><br>Lewis County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Yates/SEAL.png" height="150"><br>Yates County</br>
+				<div class="column">
+					<img src="NY/Yates/Sheriffb.png" height="80"><br>Yates County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Schuyler/SEAL.png" height="150"><br>Schuyler County</br>
+				<div class="column">
+					<img src="NY/Schuyler/Sheriff.png" height="80"><br>Schuyler County</br>
+				</div>
 			</div>
 			<div class="column">
 				<img src="NY/Hamilton/SEAL.png" height="150"><br>Hamilton County</br>
+				<div class="column">
+					<img src="NY/Hamilton/Sheriff2.png" height="80"><br>Hamilton County</br>
+				</div>
 			</div>
 
 		
