--- a/CAN/Provinces/AB-2.html
+++ b/CAN/Provinces/AB-2.html
@@ -92,11 +92,11 @@
 				<img src="../Transport/AIR/YYC/BADGE.png" height="80"><br><br>
 			</div>
 			<div class="column6">
-				<img src="AB/YYC/BylawBadge.png" height="80"><br><br>
+				<img src="AB/YYC/BylawBADGE.png" height="80"><br><br>
 			<!-- Bylaw peace officer -->
 			</div>	
 			<!-- <div class="column6"> -->
-				<!-- <img src="AB/YYC/PeaceBadge2.png" height="80"><br><br> -->
+				<!-- <img src="AB/YYC/PeaceBADGE2.png" height="80"><br><br> -->
 			<!-- city/comuunity peace officer -->
 			<!-- </div>	 -->
 			<!-- <div class="column6"> -->
@@ -122,7 +122,7 @@
 				<img src="../Transport/AIR/YEG/BADGE.png" height="80"><br><br>
 			</div>	
 			<div class="column6">
-				<img src="AB/YEG/Peacebadge1.png" height="80"><br><br>
+				<img src="AB/YEG/PeaceBADGE1.png" height="80"><br><br>
 			</div>	
 			<div class="column6">
 				<img src="AB/PO/UofA.png" height="80"><br><br>
