--- a/CAN/Provinces/BC/YVR.html
+++ b/CAN/Provinces/BC/YVR.html
@@ -15,7 +15,7 @@
 		</div>
 		
 		<div class="column">
-			<!-- <a href="VFRS.html"> --><img src="YVR/Fire/BADGE.png" height="200"><br>Vancouver Fire Resuce Services</a><br><br>
+			<img src="YVR/Fire/BADGE.png" height="200"><br>Vancouver Fire Resuce Services<br><br>
 		</div>
 
 	</div>
