--- a/ROW/AUS-2.html
+++ b/ROW/AUS-2.html
@@ -76,7 +76,7 @@
 					<img src="AUS/WA/Fire/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/SJABadge.png" height="100"></br>
+					<img src="AUS/SJABADGE.png" height="100"></br>
 				</div>
 		</div>
 		
@@ -143,7 +143,7 @@
 					<img src="AUS/NT/Fire/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/SJABadge.png" height="100"></br>
+					<img src="AUS/SJABADGE.png" height="100"></br>
 				</div>
 			</div>				
 
