--- a/ROW/MIL-MP.html
+++ b/ROW/MIL-MP.html
@@ -130,7 +130,7 @@
 				<!-- <img src="AUS/FED/DEF/FLAG.png" height="150"> -->
 				<br>Australian Defence Forces</br>
 					<div class="column0">
-						<img src="AUS/FED/DEF/MP Badge.png" height="100"><br>Royal Australian Corps of Military Police</br>
+						<img src="AUS/FED/DEF/MP BADGE.png" height="100"><br>Royal Australian Corps of Military Police</br>
 					</div>
 			</div>
 		<div class="column4"> <!-- New Zealand -->
@@ -163,7 +163,7 @@
 			<img src="EU/DE/Defence/BADGE.png" height="150"><br><!-- Bundeswehr</br> --><i>(German Federal Defence Forces)</i></br>
 				<div class="row">
 					<div class="column">
-						<img src="EU/DE/Defence/MP Badge.png" height="100"><br>Feldjäger</br><i>(German Military Police)</i></br>
+						<img src="EU/DE/Defence/MP BADGE.png" height="100"><br>Feldjäger</br><i>(German Military Police)</i></br>
 					</div>
 				</div>
 			</div>
