--- a/USA/State/DE.html
+++ b/USA/State/DE.html
@@ -28,7 +28,7 @@
 		</div>
 		
 		<div class="column2">
-			<img src="!Capitol/DE/CapBadge.png" height="200"><br>Delaware Capitol Police<br><br>
+			<img src="!Capitol/DE/CapBADGE.png" height="200"><br>Delaware Capitol Police<br><br>
 		</div>
 		
 		<div class="column2">
