--- a/USA/State/IL.html
+++ b/USA/State/IL.html
@@ -30,7 +30,7 @@
 			<img src="!Capitol/IL/SOS/BADGE.png" height="100"><br>Illinois Conservation Police</a><br>
 			<!-- <img src="!Capitol/IL/SOS/BADGE2.jpg" height="100"><br>Illinois Secretary of State Police</a><br> -->
 			<div class="column0">
-				<img src="!Capitol/IL/SOS/CapBadge.png" height="80"><br>Illinois Capitol Police</a><br><br>
+				<img src="!Capitol/IL/SOS/CapBADGE.png" height="80"><br>Illinois Capitol Police</a><br><br>
 			</div>
 		</div>
 
