--- a/CAN/Provinces/AB-2.html
+++ b/CAN/Provinces/AB-2.html
@@ -89,7 +89,7 @@
 				<img src="../Transport/Transit/CT/BADGE.png" height="80"><br><br>
 			</div>	
 			<div class="column6">
-				<img src="../Transport/AIR/YYC/BADGE.png" height="80"><br><br>
+				<img src="../Transport/Air/YYC/BADGE.png" height="80"><br><br>
 			</div>
 			<div class="column6">
 				<img src="AB/YYC/BylawBADGE.png" height="80"><br><br>
@@ -119,7 +119,7 @@
 				<img src="../Transport/Transit/YEGBADGE.png" height="80"><br><br>
 			</div>	
 			<div class="column6">
-				<img src="../Transport/AIR/YEG/BADGE.png" height="80"><br><br>
+				<img src="../Transport/Air/YEG/BADGE.png" height="80"><br><br>
 			</div>	
 			<div class="column6">
 				<img src="AB/YEG/PeaceBADGE1.png" height="80"><br><br>
@@ -189,12 +189,12 @@
 	<div class="row">
 		
 		<div class="column2">
-			<img src="AB/Seals/Grande Prairie.png" height="150"><br>City of Grande Prairie</br>
+			<img src="AB/Seals/Grande PrAirie.png" height="150"><br>City of Grande PrAirie</br>
 			<div class="column">
-				<img src="AB/Police/Grande Prairie.png" height="80"><br><br>
+				<img src="AB/Police/Grande PrAirie.png" height="80"><br><br>
 			</div>
 			<div class="column">
-				<img src="AB/PO/Grande Prairie2.png" height="80"><br><br>
+				<img src="AB/PO/Grande PrAirie2.png" height="80"><br><br>
 			</div>
 			<div class="column">
 				<img src="AB/Fire.png" height="80"><br><br>
