--- a/CAN/Transport/Rail.html
+++ b/CAN/Transport/Rail.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../../style.css">
     <title>Rail Police</title>
 	<p ALIGN=LEFT ><a href="../Transport.html">BACK</a></p>
-	<link rel="icon" type="image/x-icon" href="train.ico">
+	<link rel="icon" type="image/x-icon" href="Train.ico">
   </head>
   <body>
     <h1><img src="LOGO.png" height="150"></h1><h2>Railway Police</h2>
