--- a/USA/FED/DHS/CBP.html
+++ b/USA/FED/DHS/CBP.html
@@ -98,20 +98,20 @@
 
 	</div>
 	
-	<!-- AIR AND MARINE -->
+	<!-- Air AND MARINE -->
 	<div class="column05" width="33">
 	<h1>
-		<div class="amoheader"><img src="CBP/AIR/BADGE.png" height="250"><img src="CBP/AIR/MBADGE.png" height="250"></div>
+		<div class="amoheader"><img src="CBP/Air/BADGE.png" height="250"><img src="CBP/Air/MBADGE.png" height="250"></div>
 	</h1>
 	<h2>Customs and Border Protection</h2><h3>Air and Marine Operations</h3>
 
 	<div class="row">
 		 
-		<div class="column"><a href="CBP/AIR/bdc78504aa.jpg"><img src="CBP/AIR/bdc78504aa.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="CBP/Air/bdc78504aa.jpg"><img src="CBP/Air/bdc78504aa.jpg" width="90%"></a></br></div>
 		 
-		<div class="column"><a href="CBP/AIR/f54e22a626.jpg"><img src="CBP/AIR/f54e22a626.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="CBP/Air/f54e22a626.jpg"><img src="CBP/Air/f54e22a626.jpg" width="90%"></a></br></div>
 		
-		<div class="column"><a href="CBP/AIR/e52cf7b.jpg"><img src="CBP/AIR/e52cf7b.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="CBP/Air/e52cf7b.jpg"><img src="CBP/Air/e52cf7b.jpg" width="90%"></a></br></div>
 
 	</div>
 	</div>
