--- a/USA/FED/DHS/CBP/AMO.html
+++ b/USA/FED/DHS/CBP/AMO.html
@@ -16,13 +16,13 @@
   </head>
   <body>
   
-	<!-- AIR AND MARINE -->
+	<!-- Air AND MARINE -->
 	<h1>
 		<div class="column2">
-			<img src="AIR/BADGE.png" height="250">
+			<img src="Air/BADGE.png" height="250">
 		</div>
 		<div class="column2">
-			<img src="AIR/MBADGE.png" height="250">
+			<img src="Air/MBADGE.png" height="250">
 		</div>
 		
 	</h1>
@@ -31,11 +31,11 @@
 
 	<div class="row">
 		 
-		<div class="column"><a href="AIR/bdc78504aa.jpg"><img src="AIR/bdc78504aa.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="Air/bdc78504aa.jpg"><img src="Air/bdc78504aa.jpg" width="90%"></a></br></div>
 		 
-		<div class="column"><a href="AIR/f54e22a626.jpg"><img src="AIR/f54e22a626.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="Air/f54e22a626.jpg"><img src="Air/f54e22a626.jpg" width="90%"></a></br></div>
 		
-		<div class="column"><a href="AIR/e52cf7b.jpg"><img src="AIR/e52cf7b.jpg" width="90%"></a></br></div>
+		<div class="column"><a href="Air/e52cf7b.jpg"><img src="Air/e52cf7b.jpg" width="90%"></a></br></div>
 
 	</div>
 	</div>
