--- a/USA/FED/DHS/CBP2.html
+++ b/USA/FED/DHS/CBP2.html
@@ -23,14 +23,14 @@
 		<img src="CBP/FO/Air_Force_One_&_CBP.jpg" width="90%"></a>
 	</div>
 	
-	<!-- AIR AND MARINE -->
+	<!-- Air AND MARINE -->
 	<div class="column">
 	<a href="CBP/AMO.html">
 	
-		<div class="amoheader"><img src="CBP/AIR/BADGE.png" height="200"><img src="CBP/AIR/MBADGE.png" height="200"></a></div>
+		<div class="amoheader"><img src="CBP/Air/BADGE.png" height="200"><img src="CBP/Air/MBADGE.png" height="200"></a></div>
 	
 	<h2>Air and Marine Operations</h2>
-		<img src="CBP/AIR/bdc78504aa.jpg" width="90%"></a>
+		<img src="CBP/Air/bdc78504aa.jpg" width="90%"></a>
 	</div>
 	
 	<!-- BORDER PATROL -->
