--- a/USA/Transit/Air.html
+++ b/USA/Transit/Air.html
@@ -7,7 +7,7 @@
 	<p ALIGN=LEFT ><a href="../Transit.html">BACK</a></p>
   </head>
   <body>
-    <h1><img src="AIR/BADGE.png" height="150"></h1><h2>Airport Emergency Services</h2>
+    <h1><img src="Air/BADGE.png" height="150"></h1><h2>Airport Emergency Services</h2>
 
 	<div class="row">
 		<!-- <div class="column4">
@@ -20,19 +20,19 @@
 			<a href="Air/DCA.html"><img src="Air/DCA/BADGE.png" height="200"><br>Washington Metropolitan</br>Airports Authority</a><br><br>
 		</div>
 		<!-- <div class="column4">
-			<a href="AIR/CA/LAX/Police"><img src="AIR/CA/LAX/Police/BADGE.png" height="200"><br>Los Angeles World Airports Police</br></a><br><br>
+			<a href="Air/CA/LAX/Police"><img src="Air/CA/LAX/Police/BADGE.png" height="200"><br>Los Angeles World Airports Police</br></a><br><br>
 		</div>
 		<div class="column4">
-			<a href="AIR/CA/LAX/Fire"><img src="AIR/CA/LAX/Fire/BADGE.png" height="200"><br>Los Angeles Airport Fire</br></a><br><br>
+			<a href="Air/CA/LAX/Fire"><img src="Air/CA/LAX/Fire/BADGE.png" height="200"><br>Los Angeles Airport Fire</br></a><br><br>
 		</div> -->
 		<div class="column4">
-			<a href="Air/LAX.html"><img src="AIR/CA/LAX/BADGE.png" height="200"><br>Los Angeles World Airports</br></a><br><br>
+			<a href="Air/LAX.html"><img src="Air/CA/LAX/BADGE.png" height="200"><br>Los Angeles World Airports</br></a><br><br>
 		</div>
 		<div class="column4g">
-			<!-- <a href="AIR/DEN"> --><img src="AIR/DEN/BADGE.png" height="200"><br>Denver International Airport Fire Department</br></a><br><br>
+			<!-- <a href="Air/DEN"> --><img src="Air/DEN/BADGE.png" height="200"><br>Denver International Airport Fire Department</br></a><br><br>
 		</div>
 		<div class="column4g">
-			<!-- <a href="AIR/ORD/Fire"> --><img src="../State/IL/Chicago/CFD/BADGE.png" height="200"><br>Chicago Fire Department</br>O'Hare Squad</a><br><br>
+			<!-- <a href="Air/ORD/Fire"> --><img src="../State/IL/Chicago/CFD/BADGE.png" height="200"><br>Chicago Fire Department</br>O'Hare Squad</a><br><br>
 		</div>
 	</div>
 	
