--- a/USA/Transit/Rail.html
+++ b/USA/Transit/Rail.html
@@ -7,7 +7,7 @@
 	<p ALIGN=LEFT ><a href="../Transit.html">BACK</a></p>
   </head>
   <body>
-    <h1><img src="RAIL/BADGE.png" height="150"></h1><h2>Railway Police</h2>
+    <h1><img src="Rail/BADGE.png" height="150"></h1><h2>Railway Police</h2>
 	
 	</br></br></br>
 
@@ -22,7 +22,7 @@
 			<a href="Rail/CSX.html"><img src="Rail/CSX/BADGE.png" height="200"><br>CSX Transportation</br>Railroad Police</a><br><br>
 		</div>
 		<div class="column">
-			<a href="Rail/CPUS.html"><img src="Rail/CP-US/BADGE.png" height="200"><br>Canadian Pacific</br>US Railroad Police</br></a><br><br>
+			<a href="Rail/CP-US.html"><img src="Rail/CP-US/BADGE.png" height="200"><br>Canadian Pacific</br>US Railroad Police</br></a><br><br>
 		</div>
 		<div class="column">
 			<!-- <a href="Rail/CN-US"> --><img src="Rail/CN-US/BADGE.png" height="200"><br>Canadian National</br>US Railroad Police</br></a><br><br>
