--- a/USA/Transit/Rail/CP-US.html
+++ b/USA/Transit/Rail/CP-US.html
@@ -12,9 +12,9 @@
 
 	<div class="row">
 		 
-		<div class="column"><a href="CP-US/cprail160.jpg"> <img src="CP-US/cprail160.jpg" width="90%"></a></br></br></div>
+		<div class="column"><a href="CP-US/cpRail160.jpg"> <img src="CP-US/cpRail160.jpg" width="90%"></a></br></br></div>
 		
-		<div class="column"><a href="CP-US/cprail158.jpg"> <img src="CP-US/cprail158.jpg" width="90%"></a></br></br></div>
+		<div class="column"><a href="CP-US/cpRail158.jpg"> <img src="CP-US/cpRail158.jpg" width="90%"></a></br></br></div>
 
 		<div class="column"><a href="CP-US/b41ec26b20.jpg"> <img src="CP-US/b41ec26b20.jpg" width="90%"></a></br></br></div>
 
