--- a/CAN/Transport.html
+++ b/CAN/Transport.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../style.css">
     <title>Transportation</title>
 	<p ALIGN=LEFT ><a href="CAN.html">BACK</a></p>
-	<!-- <link rel="icon" type="image/x-icon" href="../../../CAN/Transit/train.ico"> -->
+	<!-- <link rel="icon" type="image/x-icon" href="../../../CAN/Transit/Train.ico"> -->
   </head>
   <body>
     <h1><img src="Transport/LOGO.png" height="150"></h1><h2>Transportation Agencies</h2>
@@ -14,13 +14,13 @@
 
 	<div class="row">		 
 		<div class="column">
-			<a href="Transport/Air.html"><img src="Transport/air/yyz/fes/BADGE.png" height="250"><br>Airport Emergency Services</a><br><br>
+			<a href="Transport/Air.html"><img src="Transport/Air/YYZ/fes/BADGE.png" height="250"><br>Airport Emergency Services</a><br><br>
 		</div>
 		<div class="column">
-			<a href="Transport/Rail.html"><img src="Transport/rail/cp-ca/BADGE.png" height="250"><br>Railway Police</a><br><br>
+			<a href="Transport/Rail.html"><img src="Transport/Rail/CP-CA/BADGE.png" height="250"><br>Railway Police</a><br><br>
 		</div>
 		<div class="column">
-			<a href="Transport/Transit.html"><img src="Transport/transit/got/BADGE.png" height="250"><br>Transit Enforcement Agencies</a><br><br>
+			<a href="Transport/Transit.html"><img src="Transport/transit/GOT/BADGE.png" height="250"><br>Transit Enforcement Agencies</a><br><br>
 		</div>
 	</div>
 	
