--- a/CAN/Transport/Air.html
+++ b/CAN/Transport/Air.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../../style.css">
     <title>Airport Services</title>
 	<p ALIGN=LEFT ><a href="../Transport.html">BACK</a></p>
-	<link rel="icon" type="image/x-icon" href="plane.ico">
+	<link rel="icon" type="image/x-icon" href="Plane.ico">
   </head>
   <body>
     <h1><img src="LOGO.png" height="150"></h1><h2>Airport Emergency Services</h2>
