--- a/USA/Transit/Rail.html
+++ b/USA/Transit/Rail.html
@@ -16,19 +16,19 @@
 			<a href="Rail/AMTRAK.html"><img src="Rail/AMTRAK/BADGE.png" height="200"><br>Amtrak Police Service</br></a><br><br>
 		</div>
 		<div class="column">
-			<!-- <a href="Rail/UP"> --><img src="Rail/UP/BADGE.png" height="200"><br>Union Pacific</br>Railroad Police</a><br><br>
+			<img src="Rail/UP/BADGE.png" height="200"><br>Union Pacific</br>Railroad Police<br><br>
 		</div>
 		<div class="column">
 			<a href="Rail/CSX.html"><img src="Rail/CSX/BADGE.png" height="200"><br>CSX Transportation</br>Railroad Police</a><br><br>
 		</div>
 		<div class="column">
-			<a href="Rail/CP-US.html"><img src="Rail/CP-US/BADGE.png" height="200"><br>Canadian Pacific</br>US Railroad Police</br></a><br><br>
+			<a href="Rail/CP-US.html"><img src="Rail/CP-US/BADGE.png" height="200"><br>Canadian Pacific</br>US Railroad Police</br></a><br>
 		</div>
 		<div class="column">
-			<!-- <a href="Rail/CN-US"> --><img src="Rail/CN-US/BADGE.png" height="200"><br>Canadian National</br>US Railroad Police</br></a><br><br>
+			<img src="Rail/CN-US/BADGE.png" height="200"><br>Canadian National</br>US Railroad Police</br><br>
 		</div>
 		<div class="column">
-			<!-- <a href="Rail/BNSF"> --><img src="Rail/BNSF/BADGE.png" height="200"><br>Burlington Northern</br>Santa Fe Railway Police</a><br><br>
+			<img src="Rail/BNSF/BADGE.png" height="200"><br>Burlington Northern</br>Santa Fe Railway Police<br><br>
 		</div>
 	</div>
 	
