--- a/CAN/Transport/Rail.html
+++ b/CAN/Transport/Rail.html
@@ -14,13 +14,18 @@
 
 	<div class="row">		 
 		<div class="column">
-			<!-- <a href="Rail/CN-CA"> --><img src="Rail/CN-CA/BADGE.png" height="200"><br>Canadian National Rail Police Service</a><br><br>
+			<img src="Rail/CN-CA/BADGE.png" height="200"><br>Canadian National Rail Police Service<br><br>
 		</div>
 		<div class="column">
-			<!-- <a href="Rail/CP-CA"> --><img src="Rail/CP-CA/BADGE.png" height="200"><br>Canadian Pacific Police Service</a><br><br>
+			<div class="column2">
+				<img src="Rail/CP-CA/BADGE.png" height="200"><br>Canadian Pacific Police Service<br><br>
+			</div>
+			<div class="column2">
+				<img src="Rail/CP-CA/CPKC2.png" height="200"><br>Canadian Pacific Kansas City Southern Police Service<br><br>
+			</div>
 		</div>
 		<div class="column">
-			<!-- <a href="Rail/VIA"> --><img src="Rail/VIA/BADGE.png" height="200"><br>VIA Rail Police Service</a><br><br>
+			<img src="Rail/VIA/BADGE.png" height="200"><br>VIA Rail Police Service<br><br>
 		</div>
 	</div>
 	
