--- a/USA/Transit/Rail.html
+++ b/USA/Transit/Rail.html
@@ -12,23 +12,31 @@
 	</br></br></br>
 
 	<div class="row">		 
-		<div class="column">
+		<div class="column4">
 			<a href="Rail/AMTRAK.html"><img src="Rail/AMTRAK/BADGE.png" height="200"><br>Amtrak Police Service</br></a><br><br>
 		</div>
-		<div class="column">
+		<div class="column4">
 			<img src="Rail/UP/BADGE.png" height="200"><br>Union Pacific</br>Railroad Police<br><br>
 		</div>
-		<div class="column">
+		<div class="column4">
 			<a href="Rail/CSX.html"><img src="Rail/CSX/BADGE.png" height="200"><br>CSX Transportation</br>Railroad Police</a><br><br>
 		</div>
-		<div class="column">
-			<a href="Rail/CP-US.html"><img src="Rail/CP-US/BADGE.png" height="200"><br>Canadian Pacific</br>US Railroad Police</br></a><br>
+		<div class="column4">
+			<img src="Rail/BNSF/BADGE.png" height="200"><br>Burlington Northern</br>Santa Fe Railway Police<br><br>
 		</div>
-		<div class="column">
+		<div class="column2">
+			<div class="column2">
+				<a href="Rail/CP-US.html"><img src="Rail/CP-US/BADGE.png" height="200"><br>Canadian Pacific</br>US Railroad Police</br></a><br>
+			</div>
+			<div class="column2">
+				<img src="../../CAN/Transport/Rail/CP-CA/CPKC3.png" height="200"><br>Canadian Pacific Kansas City Southern Railroad Police</br><br>
+			</div>
+		</div>
+		<div class="column4">
 			<img src="Rail/CN-US/BADGE.png" height="200"><br>Canadian National</br>US Railroad Police</br><br>
 		</div>
-		<div class="column">
-			<img src="Rail/BNSF/BADGE.png" height="200"><br>Burlington Northern</br>Santa Fe Railway Police<br><br>
+		<div class="column4">
+			<img src="Rail/NS/BADGE.png" height="200"><br>Burlington Northern</br>Santa Fe Railway Police<br><br>
 		</div>
 	</div>
 	
